fix a bug when we hover in dark mode

--- a/ui/desktop/app/styles/app.scss
+++ b/ui/desktop/app/styles/app.scss
@@ -131,6 +131,24 @@
     }
   }
 
+  .button-window-minimize,
+  .button-window-fullscreen {
+    &:not(:disabled) {
+      &:hover {
+        background: var(--white);
+        color: var(--ui-gray-starker-4);
+
+        @media (prefers-color-scheme: dark) {
+          color: var(--ui-gray-subtler-4);
+        }
+
+        .ember-application.rose-theme-dark & {
+          color: var(--ui-gray-subtler-4);
+        }
+      }
+    }
+  }
+
   .logotype {
     display: none;
   }
